<resources>
    <string name="app_name">Evidence</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="design_program">Design and programming</string>
    <string name="call_grand">Contact</string>
    <string name="whats">What\'s app</string>
    <string name="call">Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_image_from">"Select image from "</string>
    <string name="select_file">Select file</string>
    <string name="connection_invaild_body">Check your Internet connection and try again</string>
    <string name="connection_On">Please turn on</string>
    <string name="connection_Wifi">Wifi</string>
    <string name="connection_Data">Mobile data</string>
    <string name="connection_AirPlane">You have turned on the airplane mode.</string>
    <string name="connection_AirPlane_TurnOff">Please turn off</string>
    <string name="connection_AirPlane_Mode">Airplane mode</string>
    <string name="connection_invaild_msg">Poor Internet Connection</string>
    <string name="please_select_another_file">Please select another file</string>
    <string name="google_map">AIzaSyCjsvKLJRP5P00s2xMRbJKWIQ2bCifh9bs</string>
    <string name="email_hint"> قم بإدخال البريد الالكترونى</string>
    <string name="email">Email</string>
    <string name="password">كلمة المرور<font fgcolor='#E80101'>*</font></string>
    <string name="login">تسجيل الدخول</string>
    <string name="phone">Phone</string>
    <string name="invalidEmail">بريد إلكتروني غير صالح ، Evidence@example.com</string>
    <string name="invalidPassword">كلمة المرور ضعيفة ، على الأقل 8 أحرف مع أرقام وأحرف</string>
    <string name="invalidPhone">Invalid phone</string>
    <string name="fieldRequired">This field is required</string>
    <string name="next">التالى</string>
    <string name="slider_title1">سرعة وصول الطلب</string>
    <string name="slider_desc1">لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعه … بروشور او فلاير على سبيل المثال … او نماذج مواقع انترنت</string>
    <string name="slider_title2">تحديد موقع العميل بدقه</string>
    <string name="slider_desc2">لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعه … بروشور او فلاير على سبيل المثال … او نماذج مواقع انترنت</string>
    <string name="slider_title3">إصنع دخلك الخاص بكثره الرحلات</string>
    <string name="slider_desc3">لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعه … بروشور او فلاير على سبيل المثال … او نماذج مواقع انترنت</string>
    <string name="startApp">إبدأ التطبيق</string>
    <string name="choose_country">إختر الدولة</string>
    <string name="country_next">التالى</string>
    <string name="login_header">تسجيل الدخول</string>
    <string name="login_header_number"> رقم الجوال</string>
    <string name="login_forget">هل فقدت كلمة المرور ؟</string>
    <string name="forget_header">نسيت كلمة المرور؟</string>
    <string name="forget_remember">تذكرت كلمة المرور</string>
    <string name="send">إرسال</string>
    <string name="confirm_header_text">كود تأكيد كلمة المرور</string>
    <string name="confirm">تأكيد</string>
    <string name="confirm_resend">إعادة ارسال</string>
    <string name="change_header">كلمة مرور جديدة</string>
    <string name="change_header_text">من فضلك قم بإدخال كلمة المرور</string>
    <string name="change_new_password">كلمة المرور الجديدة</string>
    <string name="change_confirm_password">تأكيد كلمة المرور<font fgcolor='#E80101'>*</font></string>
    <string name="password_hint">قم بإدخال كلمة المرور</string>
    <string name="register_header">إنشاء حساب جديد</string>
    <string name="register_name">الإسم <font fgcolor='#E80101'>*</font></string>
    <string name="name_hint">إسم المستخدم</string>
    <string name="register_phone"> رقم الجوال<font fgcolor='#E80101'>*</font></string>
    <string name="register_password">كلمة المرور</string>
    <string name="register">إنشاء حساب جديد</string>
    <string name="have_account">لدي حساب مسبق؟</string>
    <string name="register_last_name">الاسم الثانى</string>
    <string name="identity_number">الرقم القومي</string>
    <string name="identity_number_hint">من فضلك قم بإدخال الرقم القومي</string>
    <string name="register_city">المدينة</string>
    <string name="register_city_hint">من فضلك قم باختيار المدينة</string>
    <string name="identity_type">نوع الهوية</string>
    <string name="identity_type_hint">من فضلك قم باختيار نوع الهوية</string>
    <string name="car_type">نوع المركبة</string>
    <string name="car_type_hint">من فضلك قم باختيار نوع المركبة</string>
    <string name="car_plate">لوحة المركبة</string>
    <string name="car_plate_chars_hint">الحروف</string>
    <string name="car_plate_numbers_hint">الأرقام</string>
    <string name="car_front_image">صورة أمامية للمركبة</string>
    <string name="car_front_image_hint">إرفاق صورة المركبة</string>
    <string name="car_back_image">صورة خلفية للمركبة</string>
    <string name="insurance_image">صورة التأمين</string>
    <string name="insurance_image_hint">إرفاق صورة التأمين</string>
    <string name="license_image">صورة التراخيص</string>
    <string name="license_image_hint">إرفاق صورة التراخيص</string>
    <string name="license_civil_image">صورة القيادة المدنية</string>
    <string name="license_civil_image_hint">إرفاق صورة القيادة المدنية</string>
    <string name="bank_name_account">اسم صاحب الحساب</string>
    <string name="bank_number_account">رقم حساب البنك</string>
    <string name="bank_name">اسم البنك</string>
    <string name="document">تحميل المستند</string>
    <string name="menuHome">الرئيسية</string>
    <string name="menuClients">Clients</string>
    <string name="menuCases">Cases</string>
    <string name="menuUsers">Users</string>
    <string name="home_search_hint">ابحث</string>
    <string name="normal_orders">طلبات التوصيل</string>
    <string name="stores_orders">طلبات المتاجر</string>
    <string name="order_distance">"مسافة الطلب : "</string>
    <string name="order_client">"اسم العميل : "</string>
    <string name="order_number">رقم الطلب :</string>
    <string name="account_verified">حساب موثق</string>
    <string name="account_my_ads">إعلاناتي</string>
    <string name="my_fund_ads">إعلاناتي المميزة</string>
    <string name="client_warning">Cant not be done</string>
    <string name="delivery_vat_total_text">إجمالى رسوم التوصيل</string>
    <string name="tv_account_billing_total_text">إجمالى الفواتير المدفوعة</string>
    <string name="tv_account_order_num_text">عدد الطلبات</string>
    <string name="tv_account_num_comments_text">تعليقات المستحدمين</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="tv_settings_nearest_orders">تنبيه الطلبات القريبة</string>
    <string name="tv_settings_registered_stores">متاجر قمت بالتسجيل بها</string>
    <string name="profile_edit">تعديل حسابى</string>
    <string name="terms">الشروط و الأحكام</string>
    <string name="rate">قيم التطبيق</string>
    <string name="about"> عن التطبيق</string>
    <string name="tv_account_upload_documents">تحميل المستندات</string>
    <string name="tv_account_warning1">لا يمكن تعديل البيانات الشخصية الا من قبل الأدمن الرئيسي</string>
    <string name="tv_account_warning2">يمكن تعديل كلمة المرور فقط</string>
    <string name="password_hint_confirm">تأكيد كلمة المرور الجديدة</string>
    <string name="edit">Edit </string>
    <string name="privacy">الخصوصية</string>
    <string name="message_hint">اترك رسالتك هنا</string>
    <string name="about_title">تطبيق خدني</string>
    <string name="upload_doc_btn">تعديل</string>
    <string name="tv_points_header">رصيد حسابك الحالي</string>
    <string name="point">نقطة</string>
    <string name="point_warning1">يمكنمك استبدال نقاطك بمبالغ مالية</string>
    <string name="point_warning2">رصيد حسابك الحالي يمكن استبداله ب</string>
    <string name="points_btn">استبدال نقاطي</string>
    <string name="total">الإجمالي </string>
    <string name="my_account_balance">رصيد حسابي</string>
    <string name="current_ads">الحالية</string>
    <string name="previous_ads">المنتهية</string>
    <string name="new_review">إضافة تقييم</string>
    <string name="waiting_orders">طلبات فى الإنتظار</string>
    <string name="market_details">معلومات المتجر</string>
    <string name="tv_market_details_distance_start">(علي بعد </string>
    <string name="tv_market_details_distance_end">(</string>
    <string name="market_delegate_count">عدد المناديب</string>
    <string name="be_delegate">سجلني كمندوب</string>
    <string name="tv_details_delivery_time_text">وقت التوصيل : </string>
    <string name="tv_details_order_client_text">طلب االعميل</string>
    <string name="tv_details_order_details_text">تفاصيل الطلب</string>
    <string name="tv_details_images">صور توضيحية</string>
    <string name="tv_details_delivery_places">أماكن التوصيل</string>
    <string name="order_delivered_location">موقع استلام الشحنة</string>
    <string name="order_locations">3 شارع هاشم الشقر , مدينة نصر , القاهرة</string>
    <string name="order_delivery_location">موقع تسليم الشحنة</string>
    <string name="send_order">أنا مستعد أوصل هذا الطلب</string>
    <string name="delivery_Cost">تكلفة التوصيل</string>
    <string name="del_cost_hint">مبلغ التوصيل</string>
    <string name="delivery_cost_send">توصيل</string>
    <string name="chat_hint">إكتب رسالتك </string>
    <string name="msg_server_error">حدث خطأ ما يرجى المحاوله فى وقت اخر</string>
    <string name="password_not_match">كلمة المرور غير مطابقة</string>
    <string name="select_image_profile">يرجى إختيار الصورة</string>
    <string name="front_car_add">لقد تم اختيار الصورة الاماميه بنجاح</string>
    <string name="back_car_add">لقد تم اختيار الصورة الخلفيه بنجاح</string>
    <string name="insurance_car_add">لقد تم اختيار صورة التأمين بنجاح</string>
    <string name="license_car_add">لقد تم اختيار صورة الترخيص بنجاح</string>
    <string name="civil_car_add">لقد تم اختيار صورة القياده بنجاح</string>
    <string name="delegate">مندوب</string>
    <string name="order">طلب</string>
    <string name="comment">" " تعليق</string>
    <string name="market">المتجر</string>
    <string name="current_location">موقعى الحالى</string>
    <string name="market_location_url">http%3A%2F%2Ftakeme.my-staff.net%2Fpublic%2Fmarket_location.png</string>
    <string name="driver_location_url">http%3A%2F%2Ftakeme.my-staff.net%2Fpublic%2Fdriver_location.png</string>
    <string name="tv_account_contact">اتصل بنا</string>
    <string name="add_info1">
        ١-سيتم إيقاف العضوية فى حال مخالفة الشروط دون سابق إنذار
    </string>
    <string name="police_acceptance">أتعهد و أوافق على الشروط و الأحكام</string>
    <string name="add_info2">٢- إغلاق الإعلان بعد التأجير او البيع</string>
    <string name="add_info6">٦-تحديد السعر إجباري</string>
    <string name="add_info5">٥- إرفاق صور فعلية للعقار</string>
    <string name="add_info4">٤- الدقة فى الموقع و المصداقية</string>
    <string name="add_info3">٣- الاكتفاء بخاصية التحديث و عدم التكرار</string>
    <string name="special_register">اشتراك مميز ٥٠٠٠ ريال</string>
    <string name="special_register_info2">يعفي عن الرسوم لمدة سنة مع جميع مميزات الباقة المميزة</string>
    <string name="special_register_info3">نقاط توضيحية</string>
    <string name="policy_pay_fees">أتعهد بدفع الرسوم</string>
    <string name="sort_title">الترتيب حسب</string>
    <string name="latest">الأحدث</string>
    <string name="price_high_low">السعر : الأعلى إلى الأقل</string>
    <string name="price_low_high">السعر : الأقل إلي الأعلي</string>
    <string name="big_area">المنطقة : الأكبر</string>
    <string name="samllest_area">المنطقة : الأصغر</string>
    <string name="high_views">الأكثر مشاهدة</string>
</resources>