<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="grand.app.akar.pages.home.viewModels.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <grand.app.akar.customViews.views.CustomTextViewMedium
            android:id="@+id/btn_diff_locations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp12h"
            android:text="@string/sort_title"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onCheckedChanged="@{viewModel.sortType}"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_diff_locations">

            <RadioButton
                android:id="@+id/radioLatest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_margin="@dimen/dp8h"
                android:padding="@dimen/dp8h"
                android:text="@string/latest"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                app:buttonTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlayBackground" />

            <RadioButton
                android:id="@+id/radioPriceHighLow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_margin="@dimen/dp8h"
                android:padding="@dimen/dp8h"
                android:text="@string/price_high_low"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                app:buttonTint="@color/colorPrimary" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlayBackground" />

            <RadioButton
                android:id="@+id/radioPriceLowHigh"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_margin="@dimen/dp8h"
                android:padding="@dimen/dp8h"
                android:text="@string/price_low_high"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                app:buttonTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlayBackground" />

            <RadioButton
                android:id="@+id/radioBigArea"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_margin="@dimen/dp8h"
                android:padding="@dimen/dp8h"
                android:text="@string/big_area"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                app:buttonTint="@color/colorPrimary" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlayBackground" />

            <RadioButton
                android:id="@+id/radioSmallestArea"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_margin="@dimen/dp8h"
                android:padding="@dimen/dp8h"
                android:text="@string/samllest_area"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                app:buttonTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlayBackground" />

            <RadioButton
                android:id="@+id/radioViews"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_margin="@dimen/dp8h"
                android:padding="@dimen/dp8h"
                android:text="@string/high_views"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                app:buttonTint="@color/colorPrimary" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>